Quick fix for iframe embedded videos
Scale iframes to fit column width. For example, https://www.irunfar.com/elite-feet-part-two contains multiple YouTube videos embedded within iframes. Prior to this stylesheet update, the video players appear at full size, overlapping adjacent columns. After this update, they appear properly scaled down to fit the column width.

--- a/columnate.css
+++ b/columnate.css
@@ -41,3 +41,8 @@ img {
 	height: auto !important;
 	max-width: 100%;
 }
+
+iframe {
+	width: auto;
+	height: auto;
+}
